# Kosmos

./: .gitignore  AI_AGENT_COMPARISON_PROMPT.md  AI_AGENT_COMPARISON_PROMPT_SHORT.txt  COMPARISON_METHODOLOGY.md  E2E_CHECKPOINT_20251126.md  E2E_CHECKPOINT_20251127_SESSION7.md  E2E_DEPENDENCY_REMEDIATION_CHECKLIST.md  E2E_RESUME_PROMPT.md  E2E_TESTING_DEPENDENCY_REPORT.md  E2E_TESTING_IMPLEMENTATION_PLAN.md  E2E_TESTING_PLAN.md  E2E_WORKFLOW_CHECKLIST.md  E2E_WORKFLOW_KICKOFF_PROMPT.md  IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  STEP2_CONTINUATION_PROMPT.md  STEP3_CONTINUATION_PROMPT.md  UNIFIED_BUG_LIST.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
archive/checklists/: CORE_COMPONENTS_CHECKLIST.md  REQUIREMENTS_TEST_GENERATION_CHECKLIST.md  TEST_GENERATION_SUMMARY.md
archive/implementation/: IMPLEMENTATION_REPORT.md  IMPLEMENTATION_WORKFLOW_GUIDE.md  KOSMOS_GAP_IMPLEMENTATION_PROMPT.md  OPENQUESTIONS_SOLUTION.md  OPEN_QUESTIONS.md
archive/issues/: issue_6_analysis.md
archive/planning/: PRODUCTION_PLAN.md  document_cleanup_plan.md
archive/prompts/: PROMPT_3_PRODUCTION_OVERHAUL.md  PROMPT_4_PRODUCTION_DEPLOYMENT.md  PROMPT_README_UPDATE.md  code_review1125.md
archive/reports/: CODE_REVIEW_REPORT_1125.md
archived/bug-fixes-2025-11-19/: ARCHIVE_SUMMARY.md  CLI_MODEL_PROMPT.md  GIT_WORKTREE_SETUP.md  MERGE_CONFLICT_STRATEGY.md  WEB_MODEL_PROMPT.md
docs/: PHASE_10_WEEK_4_PART_1_CHECKPOINT_2025-11-12.md  PHASE_2_COMPLETION.md  PHASE_9_CHECKPOINT_2025-11-09_v6.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  REVIEW.md
document_archive/: CODE_REVIEW_BUGS.md  CODE_REVIEW_CRITICAL_ANALYSIS.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  README.md  code_review_cc_opus.md  code_review_cc_sonnet.md  code_review_gemini3.md  code_review_gemini_deep_research.md  code_review_gemini_deep_think.md  code_review_opus.md  code_review_sonnet_deep_research.md  code_review_sonnet_deep_research2.md
kosmos/: config.py
kosmos/agents/: experiment_designer.py  hypothesis_generator.py  research_director.py
kosmos/cli/: main.py
kosmos/cli/commands/: profile.py  run.py
kosmos/core/: async_llm.py  convergence.py  feedback.py  memory.py
kosmos/domains/biology/: metabolomics.py
kosmos/execution/: executor.py  result_collector.py
kosmos/models/: result.py
kosmos/safety/: code_validator.py  guardrails.py  reproducibility.py
kosmos/utils/: __init__.py  compat.py
kosmos_ai_scientist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/fixtures/: sample.bib  sample.ris  sample_arxiv_response.xml  sample_papers.json  sample_pubmed_response.xml  sample_semantic_scholar_response.json
tests/integration/: test_phase2_e2e.py
tests/unit/agents/: test_literature_analyzer.py
tests/unit/knowledge/: test_concept_extractor.py  test_embeddings.py  test_graph.py  test_vector_db.py
tests/unit/literature/: test_arxiv_client.py  test_citations.py  test_pubmed_client.py  test_semantic_scholar.py  test_unified_search.py
